--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "library of string manipulation functions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/nekacurry/String-Lib/issues"
   },
-  "homepage": "https://github.com/nekacurry/String-Lib#readme"
+  "homepage": "https://github.com/nekacurry/String-Lib#readme",
+  "dependencies": {
+    "jest": "^26.6.3"
+  }
 }
