--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "library of string manipulation functions",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/nekacurry/String-Lib#readme",
   "dependencies": {
     "jest": "^26.6.3"
+  },
+  "devDependencies": {
+    "coveralls": "^3.1.0"
   }
 }
